# rse_1

./: README.md  ballistics.html  demo.ipynb  pyproject.toml  search.js
.github/workflows/: pdoc.yml  publish.yml  pytest.yml
ballistics/: __init__.py  core.py  demo.ipynb  test_ballistics.py
ballistics/.github/workflows/: pytest.yml
